# games101-2020

./: README.md
Assignment1/: README.md
Assignment1/code/: main.cpp
Assignment1/src/: main.cpp
Assignment2/: README.md
Assignment2/src/: main.cpp  rasterizer.cpp
Assignment3/: README.md
Assignment3/Code/: Texture.hpp  Triangle.cpp  main.cpp  rasterizer.cpp
Assignment3/Code/models/horse/: horse.obj:Zone.Identifier  horse.objZone.Identifier
Assignment4/: README.md
Assignment4/code/: main.cpp
Assignment5/: README.md
Assignment5/Code/: Renderer.cpp  Triangle.hpp
Assignment5/Code/images/: binary.ppm
Assignment6/: README.md
Assignment6/Code/: BVH.cpp  README.md  Renderer.cpp  Triangle.hpp  Vector.hpp
Assignment6/Code/images/: binary.ppm
Assignment7/Code/: BVH.cpp  Bounds3.hpp  README.md  Renderer.cpp  Scene.cpp  Triangle.hpp  Vector.hpp  main.cpp
Assignment7/Code/images/: 512x512-8.ppm
Assignment8/: README.md
Assignment8/src/: rope.cpp
Final/: README.md  The_Ball-Pivoting_Algorithm_for_Surface_Reconstruc.docx
Final/code/: CMakeLists.txt  Edge.hpp  Front.hpp  Pivoter.cpp  Pivoter.h  Triangle.hpp  binary_io.h  main.cpp  mesh_io.cpp  mesh_io.h  preprocess.cpp  triangle.hpp
Final/code/data/: N  V
Final/models/: bunny.3dm  bunny.3dmbak  bunny.gh
testEigen/: CMakeLists.txt  main.cpp
